# cmd/api/health.go
@@ -5,7 +5,16 @@ import (
 	"net/http"
 )
 
+// healthcheckHandler godoc
+//
+//	@Summary		Healthcheck
+//	@Description	Healthcheck endpoint
+//	@Tags			ops
+//	@Produce		json
+//	@Success		200	{object}	string	"ok"
+//	@Router			/health [get]
 func (app *application) healthCheckHandler(w http.ResponseWriter, r *http.Request) {
+
 	data := map[string]string{
 		"status":  "ok",
 		"env":     app.config.env,
