# cmd/api/middleware.go
@@ -1,0 +1,138 @@
+package main
+
+import (
+	"context"
+	"encoding/base64"
+	"fmt"
+	"net/http"
+	"strconv"
+	"strings"
+
+	"github.com/Aiyanu/gophersocial/internal/store"
+	"github.com/golang-jwt/jwt/v5"
+)
+
+func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		authHeader := r.Header.Get("Authorization")
+		if authHeader == "" {
+			app.unauthorisedBasicError(w, r, fmt.Errorf("authorization header is missing"))
+			return
+		}
+
+		parts := strings.Split(authHeader, " ") //authroization: Bearer <token>
+
+		if len(parts) != 2 || parts[0] != "Bearer" {
+			app.unauthorisedError(w, r, fmt.Errorf("authorization header is missing"))
+			return
+		}
+
+		token := parts[1]
+		jwtToken, err := app.authenticator.ValidateToken(token)
+		if err != nil {
+			app.unauthorisedError(w, r, err)
+			return
+		}
+
+		claims := jwtToken.Claims.(jwt.MapClaims)
+		userID, err := strconv.ParseInt(fmt.Sprintf("%.f", claims["sub"]), 10, 64)
+		if err != nil {
+			app.unauthorisedError(w, r, err)
+			return
+		}
+
+		ctx := r.Context()
+		user, err := app.getUser(ctx, userID)
+		if err != nil {
+			app.unauthorisedError(w, r, err)
+			return
+		}
+		ctx = context.WithValue(ctx, userCtx, user)
+		next.ServeHTTP(w, r.WithContext(ctx))
+	})
+}
+
+func (app *application) BasicAuthMiddleware() func(http.Handler) http.Handler {
+	return func(next http.Handler) http.Handler {
+		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+			authHeader := r.Header.Get("Authorization")
+			if authHeader == "" {
+				app.unauthorisedBasicError(w, r, fmt.Errorf("authorization header is missing"))
+				return
+			}
+			parts := strings.Split(authHeader, " ")
+			if len(parts) != 2 || parts[0] != "Basic" {
+				app.unauthorisedBasicError(w, r, fmt.Errorf("authorization Header is malformed"))
+				return
+			}
+			decoder, err := base64.StdEncoding.DecodeString(parts[1])
+			if err != nil {
+				app.unauthorisedBasicError(w, r, err)
+				return
+			}
+
+			username := app.config.auth.basic.user
+			pass := app.config.auth.basic.pass
+
+			creds := strings.SplitN(string(decoder), ":", 2)
+			if len(creds) != 2 || creds[0] != username || creds[1] != pass {
+				app.unauthorisedBasicError(w, r, fmt.Errorf("invalid credential"))
+				return
+			}
+
+			next.ServeHTTP(w, r)
+		})
+	}
+}
+
+func (app *application) checkPostOwnership(requiredRole string, next http.HandlerFunc) http.HandlerFunc {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		user := getUserFromContext(r)
+		post := getPostFromCtx(r)
+
+		if post.UserID == user.ID {
+			next.ServeHTTP(w, r)
+			return
+		}
+
+		allowed, err := app.checkRolePrecedence(r.Context(), user, requiredRole)
+		if err != nil {
+			app.internalServerError(w, r, err)
+			return
+		}
+
+		if !allowed {
+			app.forbiddenError(w, r, err)
+			return
+		}
+
+		next.ServeHTTP(w, r)
+	})
+}
+
+func (app *application) checkRolePrecedence(ctx context.Context, user *store.User, roleName string) (bool, error) {
+	app.logger.Infow("Cache Hit", "key", "user", "id", user.ID)
+	role, err := app.store.Roles.GetByName(ctx, roleName)
+	if err != nil {
+		return false, err
+	}
+	return user.Role.Level >= role.Level, nil
+
+}
+
+func (app *application) getUser(ctx context.Context, userID int64) (*store.User, error) {
+	user, err := app.cacheStorage.Users.Get(ctx, userID)
+	if err != nil {
+		return nil, err
+	}
+	if user == nil {
+		user, err = app.store.Users.GetByID(ctx, userID)
+		if err != nil {
+			return nil, err
+		}
+		if err := app.cacheStorage.Users.Set(ctx, user); err != nil {
+			return nil, err
+		}
+	}
+	return user, nil
+}
